Frustrated to the Max!

--- a/schotborgh_chuck_project2/css/styles.css
+++ b/schotborgh_chuck_project2/css/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #242424;
+	background-color: #AAAAAA;
 	font-family: Georgia, "Times New Roman", Times, serif;	
 	font-size: 1em;
 	margin-top: 0.1em;
@@ -10,7 +10,7 @@ body {
 form {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 1em;
-	background-color: #343434;
+	background-color: #aaaaaa;
 	}
 h1{
 	color: #5EDEFF;
